update and put in the p5js Eyes in Dark

--- a/my-first-website/page1.html
+++ b/my-first-website/page1.html
@@ -12,23 +12,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <link type='text/css' rel='stylesheet' href='style.css'>
-
     <script src="lib/p5.js"></script>
     <script src="lib/p5.sound.js"></script>
 
-    <script defer src="script1.js"></script>
-
+    <script defer src="script2.js"></script>
 </head>
 
 <body>
-    <h1>EYES IN THE DARK</h1>
-    <p> <a href="page1.html">Turn On the Light!</a> </p>
+    <p><a href="index.html">Turn Off the Light!</a> </p>
     <div id="p5-canvas">
 
     </div>
-
-
 
 </body>
 
